--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="El unico lugar en el que te atienden como en tu casa"
+      content="Soluciones Simples a tu Servicio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -35,7 +35,7 @@
       })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
   <script src="https://sdk.mercadopago.com/js/v2"></script>
-    <title>Carta Digital MADRE</title>
+    <title>Carta Digital Morton</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
